--- a/yeet/style.css
+++ b/yeet/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('https://pics.c456.xyz/yeet/yeet.jpeg');
+    background-image: url('https://pics.cheesits456.dev/yeet/yeet.jpeg');
 }
 
 h1 {
